<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">
    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>
    <PreferenceCategory android:title="@string/preference_category_experimental_settings">

        <Preference
            android:key="novaAiOptimizer"
            android:title="@string/nova_ai_optimizer_title"
            android:summary="@string/nova_ai_optimizer_summary"
            android:icon="@drawable/ic_px_experiment"/>

        <Preference
            android:key="novaAiKey"
            android:title="@string/nova_ai_key_title"
            android:summary="@string/nova_ai_key_summary"/>


        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:title="@string/preference_sysmem_title"
            android:summary="@string/preference_sysmem_summary"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="alsoftForceOpenSL"
            android:icon="@drawable/ic_px_dynamic"
            android:title="@string/preference_alsoft_opensl_title"
            android:summary="@string/preference_alsoft_opensl_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>